Correctly align attribute key value components

--- a/frontend/src/global_styles/content/_attributes_key_value.sass
+++ b/frontend/src/global_styles/content/_attributes_key_value.sass
@@ -28,9 +28,7 @@
 
 .attributes-key-value
   display: flex
-  // flex-wrap: wrap
   font-size: 0.875rem
-  margin-bottom: 0.1875rem
   flex-basis: 400px
   flex-grow: 1
   flex-shrink: 1
@@ -43,6 +41,7 @@
   &--key
     @extend .form--label
     display: flex
+    align-items: center
     flex-basis: 140px
     flex-grow: 1
     padding: 0.375rem 0
@@ -60,6 +59,7 @@
 
   &--value-container
     display: flex
+    align-items: center
     flex-basis: 260px
     flex-grow: 1000000
     flex-shrink: 1
